--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "emailjs-com": "^2.6.3",
     "formik": "^2.1.5",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
